@@ -2,6 +2,8 @@ Revision history for {{ $dist->name }}
 
 {{ $NEXT }}
 
+        - add windows_reserved option to test for Windows reserved filenames
+
 0.07      2016-09-21 23:49:46+02:00 Europe/Vienna
         - relax the ansi_chars check to allow for . and _ as the leading
           character of a filename
